--- a/about-us.html
+++ b/about-us.html
@@ -7,6 +7,7 @@
     <title>KIWI TOUR 紐西蘭旅遊網站</title>
     <link rel="stylesheet" href="./css/homepage/common.css">
     <link rel="stylesheet" href="./css/about-us/about-us.css">
+    <link rel="stylesheet" href="./css/hamburgers.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./vender/animate/animate.css">
@@ -74,15 +75,30 @@
             </ul>
             <ul class="login-main-nav">
                 <li>
-                    <a class="login" href="./log-in.html" target="_blank">
+                    <a class="login" href="./log-in.html">
                         <img src="./images/icon-homepage/login.png" alt="紐西蘭旅遊網站會員登入">
                     </a>
                     <ul class="login-sub-nav">
-                        <li><a href="./log-in.html" target="_blank">登入</a></li>
-                        <li><a href="./log-in.html" target="_blank">建立帳號</a></li>
+                        <li><a href="./log-in.html">登入</a></li>
+                        <li><a href="./log-in.html">建立帳號</a></li>
                     </ul>
                 </li>    
             </ul>
+            <div class="mobile-nav">
+                <button class="hamburger hamburger--vortex" type="button">
+                  <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                  </span>
+                </button>
+                <ul>
+                  <li><a href="./travel-category.html">紐西蘭之旅</a></li>
+                  <li><a href="./discover-nz.html">探索紐西蘭</a></li>
+                  <li><a href="./about-us.html">關於我們</a></li>
+                  <li><a href="./faq.html">FAQ專欄</a></li>
+                  <li><a href="./contact-us.html">聯繫我們</a></li>
+                  <li><a href="./log-in.html">會員登入</a></li>
+                </ul>
+            </div>
         </nav>
         <div class="main-banner"></div>
     </header>
@@ -169,10 +185,93 @@
                             </div>
                         </div>
                     </div>
-
-
-
                 </div>
+            </div>
+        </div>
+        <div class="wrapper-rwd">
+            <div class="tour-banner-rwd">
+                <div class="tour-container-rwd">
+                    <div class="tourbanner-text-rwd">
+                        <h2>行程介紹</h2>
+                        <br>
+                        <p>我們的核心信念一直是：“團體人數制度”，並且成群結隊旅行會帶來更好的旅行體驗。小組的平均人數僅為12人（最多16人），因此您的導遊可以根據小組的需要自定一天的活動；此外，您不必等待大量的人流，從而確保您在紐西蘭旅行中所花費的時間。</p>
+                    </div>
+                </div>
+            </div>
+            <div class="thumbnail-rwd">
+                <img src="./images/about-us/tour-banner.jpg" alt="">
+            </div>
+
+            <div class="culture-banner-rwd">
+                <div class="culture-container-rwd">
+                    <div class="culturebanner-text-rwd">
+                        <h2>文化風情</h2>
+                        <br>
+                        <p>我們的核心信念一直是：“團體人數制度”，並且成群結隊旅行會帶來更好的旅行體驗。小組的平均人數僅為12人（最多16人），因此您的導遊可以根據小組的需要自定一天的活動；此外，您不必等待大量的人流，從而確保您在紐西蘭旅行中所花費的時間。</p>
+                    </div>
+                </div>
+            </div>
+            <div class="thumbnail-rwd">
+                <img src="./images/about-us/culture-banner.jpg" alt="">
+            </div>
+
+            <div class="story-banner-rwd">
+                <div class="story-container-rwd">
+                    <div class="storybanner-text-rwd">
+                        <h2>品牌故事</h2>
+                        <br>
+                        <p>我們的核心信念一直是：“團體人數制度”，並且成群結隊旅行會帶來更好的旅行體驗。小組的平均人數僅為12人（最多16人），因此您的導遊可以根據小組的需要自定一天的活動；此外，您不必等待大量的人流，從而確保您在紐西蘭旅行中所花費的時間。</p>
+                    </div>
+                </div>
+            </div>
+            <div class="thumbnail-rwd">
+                <img src="./images/about-us/story-banner.jpg" alt="">
+            </div>
+
+            <div class="guide-banner-rwd">
+                <div class="guide-container-rwd">
+                    <div class="guidebanner-text-rwd">
+                        <h2>明星導覽</h2>
+                        <br>
+                        <p>我們的核心信念一直是：“團體人數制度”，並且成群結隊旅行會帶來更好的旅行體驗。小組的平均人數僅為12人（最多16人），因此您的導遊可以根據小組的需要自定一天的活動；此外，您不必等待大量的人流，從而確保您在紐西蘭旅行中所花費的時間。</p>
+                    </div>
+                </div>
+            </div>
+            <div class="thumbnail-rwd">
+                <img src="./images/about-us/guide-banner.jpg" alt="">
+            </div>
+
+            <div class="review-banner-rwd">
+                <div class="review-container-rwd">
+                    <div class="review-text-rwd">
+                        <h2>網路評價</h2>
+                        <br>
+                        <p>我們作為紐西蘭領先的小團體冒險旅行社而獲得的獎項感到無比自豪，並且我們將所有精力都集中在提供卓越的旅行體驗上。但是，不要只聽我們說的，而要看看我們的客戶怎麼說！</p>
+                    </div>
+                    <div class="review-button">
+                        <div class="facebook">
+                            <img src="./images/about-us/facebook.png" alt="">
+                            <p>
+                                <a href="https://www.facebook.com" target="_blank">查看評價</a>
+                            </p>
+                        </div>
+                        <div class="google">
+                            <img src="./images/about-us/google.png" alt="">
+                            <p>
+                                <a href="https://www.google.com" target="_blank">查看評價</a>
+                            </p>
+                        </div>
+                        <div class="tripadvisor">
+                            <img src="./images/about-us/tripadvisor.png" alt="">
+                            <p>
+                                <a href="https://www.tripadvisor.com" target="_blank">查看評價</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="thumbnail-rwd">
+                <img src="./images/about-us/review-banner.jpg" alt="">
             </div>
         </div>
     </main>
@@ -250,5 +349,13 @@
     </footer>
     <!-- Footer區塊結束 -->
     <script src="./js/travel-item.js"></script>
+
+    <script>
+        document.querySelector('.mobile-nav').addEventListener('click', function() {
+          this.classList.toggle('active');
+          this.querySelector('.hamburger').classList.toggle('is-active');
+        });
+    </script>
+
 </body>
 </html>
