--- a/discover-nz.html
+++ b/discover-nz.html
@@ -7,6 +7,7 @@
     <title>KIWI TOUR 紐西蘭旅遊網站</title>
     <link rel="stylesheet" href="./css/homepage/common.css">
     <link rel="stylesheet" href="./css/discover-nz/dicover-nz.css">
+    <link rel="stylesheet" href="./css/hamburgers.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./vender/animate/animate.css">
@@ -75,15 +76,30 @@
             </ul>
             <ul class="login-main-nav">
                 <li>
-                    <a class="login" href="./log-in.html" target="_blank">
+                    <a class="login" href="./log-in.html">
                         <img src="./images/icon-homepage/login.png" alt="紐西蘭旅遊網站會員登入">
                     </a>
                     <ul class="login-sub-nav">
-                        <li><a href="./log-in.html" target="_blank">登入</a></li>
-                        <li><a href="./log-in.html" target="_blank">建立帳號</a></li>
+                        <li><a href="./log-in.html">登入</a></li>
+                        <li><a href="./log-in.html">建立帳號</a></li>
                     </ul>
                 </li>    
             </ul>
+            <div class="mobile-nav">
+                <button class="hamburger hamburger--vortex" type="button">
+                  <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                  </span>
+                </button>
+                <ul>
+                  <li><a href="./travel-category.html">紐西蘭之旅</a></li>
+                  <li><a href="./discover-nz.html">探索紐西蘭</a></li>
+                  <li><a href="./about-us.html">關於我們</a></li>
+                  <li><a href="./faq.html">FAQ專欄</a></li>
+                  <li><a href="./contact-us.html">聯繫我們</a></li>
+                  <li><a href="./log-in.html">會員登入</a></li>
+                </ul>
+            </div>
         </nav>
         <div class="main-banner"></div>
     </header>
@@ -111,6 +127,28 @@
 
         <!-- 地圖區塊 -->
         <div class="map-content">
+            <h3>選擇城市</h3>
+            <br>
+            <div class="city">
+                <label for="city"></label>
+                <br>
+                    <select name="city" id="city">
+                        <option id="pick-auckland" value="auckland">奧克蘭</option>
+                        <option id="pick-rotorua" value="rotorua">羅托魯瓦</option>
+                        <option value="taupo">陶波湖</option>
+                        <option value="wellington">威靈頓</option>
+                        <option value="christchurch">基督城</option>
+                        <option value="trkapo">提卡波湖</option>
+                        <option value="wanaka">瓦納卡</option>
+                        <option value="queenstown">皇后鎮</option>
+                        <option value="hobbiton">哈比村</option>
+                        <option value="waitomo">螢火蟲洞</option>
+                        <option value="tongariro">末日火山</option>
+                        <option value="dunedin">但尼丁</option>
+                        <option value="joseph">約瑟夫冰川</option>
+                        <option value="milford">米佛峽灣</option>
+                    </select>
+            </div>
             <ul class="map">
                 <!-- 右側 -->
                 <li id="auckland-btn" class="marker-right auckland active"><span class="active">奧克蘭</span>
@@ -374,6 +412,12 @@
     </footer>
     <!-- Footer區塊結束 -->
     <script src="./js/discover-nz.js"></script>
+    <script>
+        document.querySelector('.mobile-nav').addEventListener('click', function() {
+          this.classList.toggle('active');
+          this.querySelector('.hamburger').classList.toggle('is-active');
+        });
+    </script>
 </body>
 </html>
     
