--- a/travel-category.html
+++ b/travel-category.html
@@ -75,12 +75,12 @@
             </ul>
             <ul class="login-main-nav">
                 <li>
-                    <a class="login" href="./log-in.html" target="_blank">
+                    <a class="login" href="./log-in.html">
                         <img src="./images/icon-homepage/login.png" alt="紐西蘭旅遊網站會員登入">
                     </a>
                     <ul class="login-sub-nav">
-                        <li><a href="./log-in.html" target="_blank">登入</a></li>
-                        <li><a href="./log-in.html" target="_blank">建立帳號</a></li>
+                        <li><a href="./log-in.html">登入</a></li>
+                        <li><a href="./log-in.html">建立帳號</a></li>
                     </ul>
                 </li>    
             </ul>
@@ -96,6 +96,7 @@
                   <li><a href="./about-us.html">關於我們</a></li>
                   <li><a href="./faq.html">FAQ專欄</a></li>
                   <li><a href="./contact-us.html">聯繫我們</a></li>
+                  <li><a href="./log-in.html">會員登入</a></li>
                 </ul>
             </div>
         </nav>
@@ -130,7 +131,7 @@
                     </div>
                 </div>              
                 <div class="thumbnail">
-                    <iframe width="472" height="315" src="https://www.youtube.com/embed/V-QfasAlNIM?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/V-QfasAlNIM?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <img src="./images/travel-category/sky-dive.jpg" alt="極限跳傘的縮圖">
                 </div>
             </div>
